<resources>
    <string name="app_name">StoryApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_login_page">Join with us come on !</string>
    <string name="title_signup_page">Daftar Sekarang!</string>
    <string name="Nama">Nama</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="label">Description</string>
    <string name="post">Upload</string>
    <string name="take_a_photo">Ambil gambar</string>
    <string name="add_story">Add new story</string>
    <string name="no_story">No stories available</string>
    <string name="logout">Logout</string>
    <string name="add_description">Tambahkan Deskripsi....</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="more">More</string>
    <string name="retry">Retry</string>
    <string name="include_location">Include Location</string>
</resources>